--- a/logging.properties
+++ b/logging.properties
@@ -25,7 +25,7 @@ handlers = jason.runtime.MASConsoleLogHandler
 ############################################################
 
 # Jason Handler parameters
-jason.runtime.MASConsoleLogHandler.level = ALL
+jason.runtime.MASConsoleLogHandler.level = INFO
 jason.runtime.MASConsoleLogHandler.formatter = jason.runtime.MASConsoleLogFormatter
 # set one text area for each agent
 jason.runtime.MASConsoleLogHandler.tabbed = true
@@ -39,7 +39,7 @@ java.util.logging.FileHandler.formatter = jason.runtime.MASConsoleLogFormatter
 #java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
 
 # Limit the message that are printed on the console to FINE and above.
-java.util.logging.ConsoleHandler.level = FINE
+java.util.logging.ConsoleHandler.level = OFF
 java.util.logging.ConsoleHandler.formatter = jason.runtime.MASConsoleLogFormatter
 
 java.level=OFF
