--- a/logging.properties
+++ b/logging.properties
@@ -4,20 +4,19 @@
 #
 
 # default Jason MAS Console
-handlers = jason.runtime.MASConsoleLogHandler
+ handlers = jason.runtime.MASConsoleLogHandler
 
 # To use the ConsoleHandler, use the following line instead.
-#handlers= java.util.logging.ConsoleHandler
+# handlers= java.util.logging.ConsoleHandler
 
 # To also add the FileHandler, use the following line instead.
-#handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
+#handlers= java.util.logging.FileHandler, jason.runtime.MASConsoleLogHandler
 
 # Default logging level. Other values are:
 #  SEVERE (only severe messages)
 #  WARNING (only warnings and severe messages)
 #  INFO (normal output)
 #  FINE (debug level of messages)
-.level = INFO
 
 ############################################################
 # Handler specific properties.
